Add alternative SQL connection

--- a/src/Foundation/connectionStrings.config
+++ b/src/Foundation/connectionStrings.config
@@ -1,7 +1,11 @@
 <connectionStrings>
 <clear />
+<!--  
 <add name="EPiServerDB" connectionString="Data Source=.;Initial Catalog=Foundation4.Cms;User Id=Foundation4User;Password=Episerver123!;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 <add name="EcfSqlConnection" connectionString="Data Source=.;Initial Catalog=Foundation4.Commerce;User Id=Foundation4User;Password=Episerver123!;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+-->
+<add name="EPiServerDB" connectionString="Data Source=.;Initial Catalog=DemoOpti.Cms;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+<add name="EcfSqlConnection" connectionString="Data Source=.;Initial Catalog=DemoOpti.Commerce;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
 <!--  
 <add name="EPiServerAzureBlobs" connectionString="DefaultEndpointsProtocol=https;AccountName=ChangeThis;AccountKey=ChangeThis" />
 <add name="EPiServerAzureEvents" connectionString="Endpoint=sb://ChangeThis.servicebus.windows.net/;SharedAccessKeyName=ChangeThis;SharedAccessKey=ChangeThis" />
