Change to my Find index. Could not control default index :(

--- a/src/Foundation/Web.config
+++ b/src/Foundation/Web.config
@@ -103,7 +103,7 @@
       <add name="Ratings" value="https://emea.social.episerver.net:8159/" />
     </endpoints>
   </episerver.social>
-  <episerver.find serviceUrl="https://es-us-api01.episerver.com/9IKGqgMZaTD9KP4Op3ygsVB6JeJzR0N6" defaultIndex="episerverab_index55794" />
+  <episerver.find serviceUrl="https://demo04.find.episerver.net/2T07M8Nq9dl5BDhU5rqATTVET4QUkCvL/" defaultIndex="cuong.nguyendinh_test11" />
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
