--- a/src/Foundation/Web.config
+++ b/src/Foundation/Web.config
@@ -113,6 +113,7 @@
       </system.Web>
   -->
   <system.web>
+    <customErrors mode="Off" />
     <httpRuntime targetFramework="4.7.2" requestValidationMode="2.0" maxRequestLength="100000" enableVersionHeader="false" fcnMode="Single" />
     <httpCookies requireSSL="false" sameSite="Lax" />
     <compilation debug="true" targetFramework="4.8" optimizeCompilations="false" />
@@ -247,12 +248,11 @@
         <requestLimits maxAllowedContentLength="524288000" />
       </requestFiltering>
     </security>
-    <httpErrors errorMode="Detailed" existingResponse="Replace">
+    <!--<httpErrors errorMode="Detailed" existingResponse="Replace">
       <remove statusCode="404" />
-      <!-- Note! You should change this to your custom error page. See the
-                 readme on https://github.com/Geta/404handler for more information -->
       <error statusCode="404" path="/notfound.aspx" responseMode="ExecuteURL" />
-    </httpErrors>
+    </httpErrors>-->
+    <httpErrors errorMode="Detailed" />
     <httpProtocol>
       <customHeaders>
         <remove name="X-Powered-By" />
