--- a/src/Foundation/Foundation.csproj
+++ b/src/Foundation/Foundation.csproj
@@ -34,6 +34,8 @@
 		<PackageReference Include="EPiServer.Personalization.MaxMindGeolocation" Version="2.1.0" />
 		<PackageReference Include="EPiServer.Session" Version="2.0.2" />
 		<PackageReference Include="EPiServer.Social.Framework" Version="2.0.2" />
+		<PackageReference Include="EPiServer.ServiceApi" Version="6.0.1" />
+		<PackageReference Include="EPiServer.ServiceApi.Commerce" Version="6.0.1" />
 		<PackageReference Include="EPiServer.Telemetry.UI" Version="2.2.0" />
 		<PackageReference Include="FileHelpers" Version="3.5.1" />
 		<PackageReference Include="Geta.NotFoundHandler.Optimizely" Version="2.0.1" />
