--- a/src/Foundation/Web.config
+++ b/src/Foundation/Web.config
@@ -1,7 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
-  For more information on how to configure your ASP.NET application, please visits
-  http://go.microsoft.com/fwlink/?LinkId=169433
+  For more information on how to configure your ASP.NET application, please visits http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <configSections>
@@ -103,7 +102,7 @@
       <add name="Ratings" value="https://emea.social.episerver.net:8159/" />
     </endpoints>
   </episerver.social>
-  <episerver.find serviceUrl="https://demo04.find.episerver.net/2T07M8Nq9dl5BDhU5rqATTVET4QUkCvL/" defaultIndex="cuong.nguyendinh_test11" />
+  <episerver.find serviceUrl="http://demo04.find.episerver.net/vXqkdmD5UFnBrEaGLHPK8TZ34Pi26vDG/" defaultIndex="cuong.nguyendinh_foundation4" />
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
@@ -253,6 +252,18 @@
       <error statusCode="404" path="/notfound.aspx" responseMode="ExecuteURL" />
     </httpErrors>-->
     <httpErrors errorMode="Detailed" />
+    <!-- <rewrite>
+      <rules>
+        <clear />
+        <rule name="Redirect to https" stopProcessing="true">
+          <match url=".*" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
+        </rule>
+      </rules>
+    </rewrite> -->
     <httpProtocol>
       <customHeaders>
         <remove name="X-Powered-By" />
@@ -272,6 +283,37 @@
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       <mimeMap fileExtension=".eot" mimeType="application/vnd.ms-fontobject" />
     </staticContent>
+    <rewrite>
+      <rules>
+        <rule name="RemoveTrailingSlashRule1" enabled="false" stopProcessing="true">
+          <match url="(.*)/$" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          </conditions>
+          <action type="Redirect" url="{R:1}" />
+        </rule>
+        <rule name="AddTrailingSlashRule1" enabled="false" stopProcessing="true">
+          <match url="(.*[^/])$" />
+          <conditions>
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          </conditions>
+          <action type="Redirect" url="{R:1}/" />
+        </rule>
+        <rule name="LowerCaseRule1" enabled="true" stopProcessing="true">
+          <match url="[A-Z]" ignoreCase="false" />
+          <action type="Redirect" url="{ToLower:{URL}}" />
+        </rule>
+        <rule name="Redirect to https" enabled="false" stopProcessing="true">
+          <match url=".*" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -860,8 +902,8 @@
       <add name="EPiServer.Forms.UI" />
       <add name="EPiServer.Forms" />
       <add name="EPiServer.Labs.LanguageManager" />
-      
-      
+
+
       <add name="VisualCompareMode" />
       <add name="Episerver.Marketing.Connector" />
       <add name="episerver-labs-configuration-manager" />
@@ -879,7 +921,9 @@
       <add name="episerver-labs-block-enhancements" />
       <add name="EPiServer.GoogleAnalytics" />
       <add name="EPiServer.Marketing.Testing" />
-    <add name="episerver-labs-content-manager" /><add name="episerver-labs-grid-view" /></protectedModules>
+      <add name="episerver-labs-content-manager" />
+      <add name="episerver-labs-grid-view" />
+    </protectedModules>
   </episerver.shell>
   <mediachase.businessFoundation.data>
     <businessManager configSource="Configs\baf.data.manager.config" />
