--- a/src/Foundation/appsettings.json
+++ b/src/Foundation/appsettings.json
@@ -11,8 +11,8 @@
   "AllowedHosts": "*",
   "EPiServer": {
     "Find": {
-      "DefaultIndex": "changeme",
-      "ServiceUrl": "http://changeme",
+      "DefaultIndex": "cuong.nguyendinh_foundation",
+      "ServiceUrl": "http://demo01.find.episerver.net/xi7gOJcAu4Cikxv8Rl5qA4JER3gpNx9e/",
       "TrackingSanitizerEnabled": true,
       "TrackingTimeout": 30000
     },
