--- a/src/Foundation/appsettings.json
+++ b/src/Foundation/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "EPiServerDB": "Server=.;Database=Foundation5.Cms;User Id=Foundation5.CmsUser;Password=r@QP65dDM%mqH@^R@Lv6iBICf;TrustServerCertificate=True",
-    "EcfSqlConnection": "Server=.;Database=Foundation5.Commerce;User Id=Foundation5.CmsUser;Password=r@QP65dDM%mqH@^R@Lv6iBICf;TrustServerCertificate=True"
+    "EPiServerDB": "Server=.;Database=Foundation5.Cms;User Id=Foundation5.CmsUser;Password=3L27pu2aqKHoB5%H8VKle*SUV;TrustServerCertificate=True",
+    "EcfSqlConnection": "Server=.;Database=Foundation5.Commerce;User Id=Foundation5.CmsUser;Password=3L27pu2aqKHoB5%H8VKle*SUV;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
@@ -20,7 +20,7 @@
       "OdpCookieName": "vuid",
       "CacheTimeoutSeconds": 1,
       "BaseEndPoint": "https://api.zaius.com",
-      "PrivateApiKey": ""
+      "PrivateApiKey": "8yZNr8Uj_eyfNNeiq0H_TQ.bIDzGXOsTPL6j4pAMNfRA8NBrYz8OmGQvHnk0wiXDPw"
     },
     "Commerce": {
       "SearchOptions": {
@@ -60,6 +60,15 @@
             "Key": "MSRP",
             "Value": "4",
             "Description": "MSRP"
+          }
+        ]
+      },
+      "ODPJob": {
+        "MarketKeys": [
+          {
+            "MarketId": "US",
+            "AccessKey": "8yZNr8Uj_eyfNNeiq0H_TQ.bIDzGXOsTPL6j4pAMNfRA8NBrYz8OmGQvHnk0wiXDPw",
+            "EndpointUrl": "https://api.zaius.com/v3"
           }
         ]
       }
@@ -120,6 +129,6 @@
   "MAIOdpSettings": {
     "OdpBaseEndPoint": "https://api.zaius.com/",
     "CustomerObjectName": "customers",
-    "APIKey": "changeme.ODP-private-key"
+    "APIKey": "8yZNr8Uj_eyfNNeiq0H_TQ.bIDzGXOsTPL6j4pAMNfRA8NBrYz8OmGQvHnk0wiXDPw"
   }
 }
