--- a/src/Foundation/Foundation.csproj
+++ b/src/Foundation/Foundation.csproj
@@ -32,6 +32,7 @@
     <!-- Optimizely Search & Navigation -->
     <PackageReference Include="EPiServer.Find.Cms" Version="16.2.0" />
     <PackageReference Include="EPiServer.Find.Commerce" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.24" />
     <PackageReference Include="PowerSlice" Version="5.2.0" />
 
     <!-- Productivity enhancements, Tools, Other Add-ons -->
