--- a/src/Foundation/appsettings.json
+++ b/src/Foundation/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "EPiServerDB": "Server=.;Database=Foundation5.Cms;User Id=Foundation5.CmsUser;Password=r@QP65dDM%mqH@^R@Lv6iBICf;TrustServerCertificate=True",
-    "EcfSqlConnection": "Server=.;Database=Foundation5.Commerce;User Id=Foundation5.CmsUser;Password=r@QP65dDM%mqH@^R@Lv6iBICf;TrustServerCertificate=True"
+    "EPiServerDB": "Server=.;Database=Foundation5.Cms;User Id=sa;Password=1;TrustServerCertificate=True",
+    "EcfSqlConnection": "Server=.;Database=Foundation5.Commerce;User Id=sa;Password=1;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
